--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,8 +5,7 @@
     },
     "extends": [
         "eslint:recommended",
-        "plugin:react/recommended",
-        "plugin:react/jsx-runtime"
+        "plugin:react/recommended"
     ],
     "parserOptions": {
         "ecmaVersion": 12,
@@ -21,6 +20,8 @@
         "no-multiple-empty-lines": "warn",
         "prefer-const": "warn",
         "no-use-before-define": "warn",
-        "react/prop-types": "warn"
+        "react/prop-types": "warn",
+        "no-unused-vars": "off"
+
     }
 }
