--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
+/build
 /node_modules
 /.pnp
 .pnp.js
@@ -10,7 +11,7 @@
 /coverage
 
 # production
-/build
+# /build
 
 # misc
 .DS_Store
