--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,10 +3,7 @@
         "browser": true,
         "es2021": true
     },
-    "extends": [
-        "eslint:recommended",
-        "plugin:react/recommended"
-    ],
+    "extends": ["eslint:recommended", "plugin:react/recommended"],
     "parserOptions": {
         "ecmaVersion": 12,
         "sourceType": "module"
@@ -22,6 +19,5 @@
         "no-use-before-define": "warn",
         "react/prop-types": "warn",
         "no-unused-vars": "off"
-
     }
 }
