--- a/.prettierrc
+++ b/.prettierrc
@@ -3,6 +3,5 @@
     "trailingComma": "all",
     "singleQuote": true,
     "printWidth": 100,
-    "tabWidth": 4,
-    "arrowParens": "avoid"
+    "tabWidth": 4
 }
